--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -58,7 +58,7 @@ jobs:
       run: php artisan migrate --force
 
     - name: Run tests
-      run: vendor/bin/pest --coverage
+      run: vendor/bin/pest
 
   deploy:
     runs-on: ubuntu-latest
