--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,13 +1,3 @@
-name: Laravel CI/CD
-
-on:
-  push:
-    branches:
-      - main
-  pull_request:
-    branches:
-      - main
-
 jobs:
   test:
     runs-on: ubuntu-latest
@@ -29,54 +19,37 @@ jobs:
           --health-retries=3
 
     steps:
-    - name: Checkout code
-      uses: actions/checkout@v3
+    - uses: actions/checkout@v3
 
-    - name: Setup PHP
-      uses: shivammathur/setup-php@v2
+    - uses: shivammathur/setup-php@v2
       with:
-        php-version: 8.4
+        php-version: 8.2
         extensions: mbstring, bcmath, pdo_mysql, xml
 
-    - name: Install Composer dependencies
-      run: composer install --prefer-dist --no-progress
+    - run: composer install --prefer-dist --no-progress --no-interaction
 
-    - name: Copy .env
-      run: cp .env.example .env
+    - run: cp .env.example .env
 
-    - name: Update .env for CI
-      run: |
-        sed -i "s/DB_HOST=.*/DB_HOST=db/" .env
-        sed -i "s/DB_DATABASE=.*/DB_DATABASE=laravel/" .env
-        sed -i "s/DB_USERNAME=.*/DB_USERNAME=laravel/" .env
-        sed -i "s/DB_PASSWORD=.*/DB_PASSWORD=laravel/" .env
+    - run: sed -i "s/DB_HOST=.*/DB_HOST=db/" .env
+    - run: sed -i "s/DB_DATABASE=.*/DB_DATABASE=laravel/" .env
+    - run: sed -i "s/DB_USERNAME=.*/DB_USERNAME=laravel/" .env
+    - run: sed -i "s/DB_PASSWORD=.*/DB_PASSWORD=laravel/" .env
 
-    - name: Generate app key
-      run: php artisan key:generate
+    - run: php artisan key:generate
 
-    - name: Run migrations
-      run: php artisan migrate --force
+    - run: |
+        until mysqladmin ping -h db -u laravel -plaravel --silent; do
+          echo "Waiting for database..."
+          sleep 3
+        done
 
-    - name: Run tests
-      run: vendor/bin/pest
+    - run: php artisan migrate --force
 
-  deploy:
-    runs-on: ubuntu-latest
-    needs: test
+    - run: |
+        php artisan config:clear
+        php artisan cache:clear
+        php artisan route:clear
+        php artisan view:clear
+        chmod -R 777 storage bootstrap/cache
 
-    steps:
-    - name: Checkout code
-      uses: actions/checkout@v3
-
-    - name: Deploy to droplet via SSH
-      uses: appleboy/ssh-action@v0.1.7
-      with:
-        host: ${{ secrets.SERVER_IP }}
-        username: ${{ secrets.SERVER_USER }}
-        key: ${{ secrets.SERVER_SSH_KEY }}
-        port: 22
-        script: |
-          cd /var/www/your-app
-          git pull origin main
-          docker-compose down
-          docker-compose up -d --build
+    - run: vendor/bin/pest
