--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -17,13 +17,16 @@ jobs:
       uses: actions/checkout@v3
 
     - name: Build Docker container
-      run: docker build -t laravel-app .
+      run: docker build -t laravel_app .
 
-    - name: Run migrations
-      run: docker run --rm laravel-app php artisan migrate --force
+    - name: Run migrations inside Docker
+      run: docker run --rm laravel_app bash -c "php artisan key:generate && php artisan migrate --force"
 
-    - name: Run tests
-      run: docker run --rm laravel-app ./vendor/bin/pest
+    - name: Prepare storage inside Docker
+      run: docker run --rm laravel_app bash -c "php artisan config:clear && php artisan cache:clear && php artisan route:clear && php artisan view:clear && chmod -R 777 storage bootstrap/cache"
+
+    - name: Run tests inside Docker
+      run: docker run --rm laravel_app bash -c "./vendor/bin/pest"
 
   deploy:
     runs-on: ubuntu-latest
